[tool.poetry]
name = "vaeGAN"
version = "1.1.0"
description = "VAE/GAN"
authors = ["tarepan"]
readme = "README.md"
repository = "https://github.com/tarepan/VAE-GAN"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
tqdm = "4.*"
omegaconf = "2.3.*"
## Poetry is not good for version control of PyTorch (it has many many variants for a version, so poetry become confused)
## torch = "2.0.0"
## torchaudio = "2.0.1"
## lightning = "2.0.*"
## lightlightning = {git = "https://github.com/tarepan/lightlightning.git", rev = "main"}

[tool.poetry.dev-dependencies]
types-tqdm = "4.*"
pytest = "7.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
  # This is opinionated
  "line-too-long",
  "pointless-string-statement",
]